ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: terraform-ingress
 namespace: terraform
 annotations:
   kubernetes.io/ingress.class: nginx
spec:
 rules:
 - host: terraform.premdesigns.in
   http:
     paths:
     - path:
       backend:
         serviceName: terraform
         servicePort: 8080
